xmppbots - add verbose JVM GC flags.